import "LiveCommon.proto";

package com.wali.live.proto;

option java_package = "com.wali.live.proto";
option java_outer_classname = "LiveProto";

//房间内运营附加信息
//zhibo.room.attachment
message GetRoomAttachmentReq {
    required uint64 zuid = 1; // 主播id
    optional bool isGetWidget = 2; // 是否获取房间内小部件信息,运营位
    required string liveid = 3; //房间id
    optional bool isGetAnimation = 4; //是否获取房间动画特效
    optional bool isGetShopType = 5; //是否获取店铺类型
    optional uint32 roomType = 6; //房间类型，0公开，1私密，2:密码房间，口令
    optional bool isGetIconConfig = 7; //是否获取直播间icon配置
    optional bool isGetRoomExtraCtrl = 8;//是否获取控制信息,add by xumin
}

message GetRoomAttachmentRsp {
    required uint32 retCode = 1; //0:表示成功
    repeated WidgetInfo widgetInfo = 2; //房间内小部件信息,运营位
    optional RoomAnimationConfig animationConfig = 3; //房间动画特效配置
    optional ShoppingConfig shoppingConfig = 4; //店铺信息
    optional NewWidgetInfo newWidgetInfo = 5; //新版运营位信息
    optional RoomIconConfig iconConfig = 6; //直播间icon配置
    optional CtrlInfo ctrlInfo = 7;//控制信息,add by xumin
    optional LimitedInfo counter = 8;//飘屏计数,add by xumin
}

//开关信息
message CtrlInfo {
    optional bool room_switch_status = 1;//房间开关状态,false:关闭,true:打开
    optional bool global_switch_status = 2;//全局开关状态,false:关闭,true:打开
}

//飘屏计数
message LimitedInfo {
     optional uint32 counter = 1;//飘屏弹幕当前计数
     optional uint32 max = 2;//飘屏弹幕最大次数
 }
